--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <th id="cpu_name"></th>
         </tr>
         <tr>
+            <th>Clock</th>
+            <th id="cpu_clock_min"></th>
+            <th id="cpu_clock_curr"></th>
+            <th id="cpu_clock_max"></th>
+            <th style="display: none;" id="cpu_clock_unit"></th>
+        </tr>
+
+        <tr>
             <th>Usage</th>
             <th id="cpu_usage_min"></th>
             <th id="cpu_usage_curr"></th>
@@ -48,6 +56,13 @@
 
         <tr>
             <th id="gpu_name"></th>
+        </tr>
+        <tr>
+            <th>Clock</th>
+            <th id="gpu_clock_min"></th>
+            <th id="gpu_clock_curr"></th>
+            <th id="gpu_clock_max"></th>
+            <th style="display: none;" id="gpu_clock_unit"></th>
         </tr>
         <tr>
             <th>Temp</th>
